fix spacing text when in the first media query

--- a/style.css
+++ b/style.css
@@ -143,6 +143,7 @@ footer{
   }
   .card-product {
     padding: 20px;
+    min-height: 330px;
   }
 }
 
